--- a/src/style/loginPage.css
+++ b/src/style/loginPage.css
@@ -24,7 +24,7 @@ body {
   position: relative;
   height: 600px;
   width: 360px;
-  box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.37);
+  box-shadow: 0 0 24px rgba(0, 0, 0, 0.37);
 }
 
 .screen__content {
@@ -88,12 +88,11 @@ body {
 
 .login {
   width: 320px;
-  padding: 30px;
-  padding-top: 156px;
+  padding: 156px 30px 30px;
 }
 
 .login__field {
-  padding: 20px 0px;
+  padding: 20px 0;
   position: relative;
 }
 
@@ -107,8 +106,7 @@ body {
   border: none;
   border-bottom: 2px solid #D1D1D4;
   background: none;
-  padding: 10px;
-  padding-left: 24px;
+  padding: 10px 10px 10px 24px;
   font-weight: 700;
   width: 75%;
   transition: .2s;
@@ -132,9 +130,9 @@ body {
   font-weight: 700;
   display: flex;
   align-items: center;
-  width: 100%;
+  width: 80%;
   color: #1683f6;
-  box-shadow: 0px 2px 2px #1683f6;
+  box-shadow: 0 2px 2px #1683f6;
   cursor: pointer;
   transition: .2s;
 }
@@ -157,8 +155,8 @@ body {
   height: 140px;
   width: 160px;
   text-align: center;
-  bottom: 0px;
-  right: 0px;
+  bottom: 0;
+  right: 0;
   color: #fff;
 }
 
@@ -172,7 +170,7 @@ body {
   padding: 20px 10px;
   color: #fff;
   text-decoration: none;
-  text-shadow: 0px 0px 8px #7875B5;
+  text-shadow: 0 0 8px #7875B5;
 }
 
 .social-login__icon:hover {
