--- a/src/style/loginPage.css
+++ b/src/style/loginPage.css
@@ -180,3 +180,10 @@ body {
 .button__text{
   color: #1683f6;
 }
+
+.login-container{
+  background-color: inherit;
+  width: 90%;
+  margin-top:30px;
+  border-radius: 20px;
+}
