--- a/src/style/pages.css
+++ b/src/style/pages.css
@@ -22,6 +22,16 @@
     border: 2px solid #007ced;
     border-radius: 19px;
 }
+.year{
+    font-size: 13px;
+    margin-right: 15px;
+    padding: 5px 10px;
+    border: 2px solid #007ced;
+    border-radius: 19px;
+}
+#delete-icon {
+    border: 2px solid red;
+}
 .research h6{
     font-size: 14px;
     color: #575757;
@@ -33,4 +43,9 @@
 .research p{
     color: #007ced;
     font-size: 14px;
+}
+.delete-icon {
+    top: -40px;
+    /*width: 50%;*/
+    /*height: 50%;*/
 }
