--- a/src/style/card.scss
+++ b/src/style/card.scss
@@ -5,6 +5,7 @@ main {
 .card {
   border-radius: 16px;
   height: 300px;
+  width: 300px;
   border: none !important;
   box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.1),
   0px 5px 8px 0px rgba(0, 0, 0, 0.09),
