--- a/src/style/editArticle.css
+++ b/src/style/editArticle.css
@@ -3,12 +3,12 @@
     margin-top: 2%;
     margin-left: 3%;
 }
-.research{
+.article{
     margin-left:20px;
     border: 1px solid #d7d7d7;
     box-shadow: 0 0 1px 0 #888888
 }
-.research span{
+.article span{
     font-size: 13px;
     margin-right: 15px;
     padding: 5px 10px;
@@ -22,19 +22,15 @@
     border: 2px solid #007ced;
     border-radius: 19px;
 }
-.research h6{
+.article h6{
     font-size: 14px;
     color: #575757;
 }
-.research h5{
+.article h5{
     font-weight: bold;
     font-size: 16px;
 }
-.research p{
+.article p{
     color: #007ced;
     font-size: 14px;
-}
-
-.edit-btn {
-
 }
